--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
-	implementation project(':domain:product-specification')
+	implementation project(':domain:products')
 }
 
 tasks.withType(KotlinCompile) {
