--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-//    id 'org.springframework.boot' version '2.7.8'
-    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-//    id 'org.jetbrains.kotlin.jvm' version '1.6.21'
-    id 'org.jetbrains.kotlin.jvm' version '1.7.21'
+//    id 'org.springframework.boot' version '3.2.1'
+//    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.21'
+//    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.21'
 
 //    id 'org.jetbrains.kotlin.plugin.spring' version '1.6.21'
 }
@@ -11,7 +11,7 @@ subprojects {
     group = 'com.digilinq.retail.product'
     version = '0.0.1-SNAPSHOT'
 
-    apply plugin: 'io.spring.dependency-management'
+//    apply plugin: 'io.spring.dependency-management'
     apply plugin: 'org.jetbrains.kotlin.jvm'
 
     repositories {
