--- a/infrastructure/src/main/resources/open-api/server/product-oas.yaml
+++ b/infrastructure/src/main/resources/open-api/server/product-oas.yaml
@@ -62,8 +62,8 @@ components:
         template:
           type: string
           example: template
-        locale:
-          $ref: '#/components/schemas/Locale'
+#        locale:
+#          $ref: '#/components/schemas/Locale'
         data:
           $ref: '#/components/schemas/MapEntry'
         proposition:
