--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,11 @@
 plugins {
-//    id 'org.springframework.boot' version '3.2.1'
-//    id 'io.spring.dependency-management' version '1.1.4'
     id 'org.jetbrains.kotlin.jvm' version '1.9.21'
-//    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.21'
-
-//    id 'org.jetbrains.kotlin.plugin.spring' version '1.6.21'
 }
 
 subprojects {
-    group = 'com.digilinq.retail.product'
+    group = 'com.eightbits.eco.retail'
     version = '0.0.1-SNAPSHOT'
 
-//    apply plugin: 'io.spring.dependency-management'
     apply plugin: 'org.jetbrains.kotlin.jvm'
 
     repositories {
@@ -19,4 +13,10 @@ subprojects {
     }
 }
 
+compileKotlin {
+    kotlinOptions.jvmTarget = '17'
+}
 
+compileTestKotlin {
+    kotlinOptions.jvmTarget = '17'
+}
