--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -3,39 +3,38 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
-//    id 'org.jetbrains.kotlin.jvm' version '1.9.21'
     id 'org.jetbrains.kotlin.plugin.spring' version '1.9.21'
 
     id 'org.openapi.generator' version '7.2.0'
 //	id 'org.jlleitschuh.gradle.ktlint' version '11.0.0'
 }
 
-group = 'org.digilinq.ec.retail'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
-
-//repositories {
-//	mavenCentral()
-//}
+java {
+    sourceCompatibility = '17'
+}
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
-    compileOnly 'jakarta.annotation:jakarta.annotation-api:2.1.1'
-    implementation 'io.swagger.core.v3:swagger-annotations:2.2.7'
-    implementation 'io.swagger.core.v3:swagger-models:2.2.7'
+    implementation 'io.swagger.core.v3:swagger-annotations:2.2.20'
+    implementation 'io.swagger.core.v3:swagger-models:2.2.20'
 
-    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.13'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
-    implementation 'org.springdoc:springdoc-openapi-kotlin:1.6.13'
+//    compileOnly 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+
+//    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.13'
+//    implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
+//    implementation 'org.springdoc:springdoc-openapi-kotlin:1.6.13'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.7.0'
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.7.0'
+
     implementation project(':domain:products')
 }
 
@@ -61,10 +60,10 @@ openApiGenerate {
     library = 'spring-boot'
     inputSpec = "$rootDir/infrastructure/src/main/resources/open-api/server/product-oas.yaml" as String
     outputDir = "$buildDir/generated/open-api/server" as String
-    packageName = 'org.digilinq.ecommerce.product.generated.v1'
-    apiPackage = 'org.digilinq.ecommerce.product.generated.v1.api'
-    modelPackage = 'org.digilinq.ecommerce.product.generated.v1.model'
-    invokerPackage = 'org.digilinq.ecommerce.product.generated.v1.invoker'
+    packageName = 'com.eightbits.eco.retail.infrastructure.generated.v1'
+    apiPackage = 'com.eightbits.eco.retail.infrastructure.generated.v1.api'
+    modelPackage = 'com.eightbits.eco.retail.infrastructure.generated.v1.model'
+    invokerPackage = 'com.eightbits.eco.retail.infrastructure.generated.v1.invoker'
     enablePostProcessFile = true
     skipOverwrite = false
     configOptions = [
