--- a/infrastructure/src/test/resources/application-test.yaml
+++ b/infrastructure/src/test/resources/application-test.yaml
@@ -1,4 +1,5 @@
-spring:
-  mongodb:
-    embedded:
-      version: 4.0.21
+de:
+  flapdoodle:
+    mongodb:
+      embedded:
+        version: 6.0.6
