Add mapstruct and add create product api

--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,16 +1,17 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id 'org.springframework.boot' version '3.2.1'
-    id 'io.spring.dependency-management' version '1.1.4'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.9.21'
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
+    id 'org.jetbrains.kotlin.plugin.spring'
+    id 'org.jetbrains.kotlin.kapt'
 
-    id 'org.openapi.generator' version '7.2.0'
+    id 'org.openapi.generator'
 //	id 'org.jlleitschuh.gradle.ktlint' version '11.0.0'
 }
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = JavaVersion.VERSION_17
 }
 
 dependencies {
@@ -23,12 +24,16 @@ dependencies {
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.20'
     implementation 'io.swagger.core.v3:swagger-models:2.2.20'
 
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+    kapt 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
 //    compileOnly 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 
 //    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.13'
 //    implementation 'org.springdoc:springdoc-openapi-ui:1.6.13'
 //    implementation 'org.springdoc:springdoc-openapi-kotlin:1.6.13'
 
+    // Swagger UI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -36,6 +41,14 @@ dependencies {
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.7.0'
 
     implementation project(':domain:products')
+}
+
+kapt {
+    arguments {
+        arg("mapstruct.unmappedTargetPolicy", "ignore")
+        arg("mapstruct.defaultComponentModel", "spring")
+    }
+    keepJavacAnnotationProcessors = true
 }
 
 tasks.withType(KotlinCompile) {
@@ -55,12 +68,14 @@ sourceSets {
     }
 }
 
+def generatedPath = 'com.eightbits.eco.retail.infrastructure.generated.v1'
+
 openApiGenerate {
     generatorName = 'kotlin-spring'
     library = 'spring-boot'
     inputSpec = "$rootDir/infrastructure/src/main/resources/open-api/server/product-oas.yaml" as String
     outputDir = "$buildDir/generated/open-api/server" as String
-    packageName = 'com.eightbits.eco.retail.infrastructure.generated.v1'
+    packageName = generatedPath
     apiPackage = 'com.eightbits.eco.retail.infrastructure.generated.v1.api'
     modelPackage = 'com.eightbits.eco.retail.infrastructure.generated.v1.model'
     invokerPackage = 'com.eightbits.eco.retail.infrastructure.generated.v1.invoker'
@@ -78,8 +93,13 @@ openApiGenerate {
     ]
 }
 
-compileKotlin.dependsOn tasks.openApiGenerate
-compileTestKotlin.dependsOn tasks.openApiGenerate
+tasks.withType(KotlinCompile).configureEach {
+    dependsOn("openApiGenerate")
+}
+
+//compileKotlin.dependsOn tasks.openApiGenerate
+//compileTestKotlin.dependsOn tasks.openApiGenerate
+
 
 //ktlint {
 //	filter {
