--- a/infrastructure/src/main/resources/application.yaml
+++ b/infrastructure/src/main/resources/application.yaml
@@ -8,6 +8,7 @@ spring:
       host: localhost
       port: 27017
       database: products
-      username: TechInnovative
-      password: TechInnovative
+#      username: TechInnovative
+#      password: TechInnovative
+      uuid-representation: standard
 #      uri: mongodb://user@localhost:27017/admin?retryWrites=true&loadBalanced=false&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1&3t.uriVersion=3&3t.databases=admin&3t.alwaysShowAuthDB=true&3t.alwaysShowDBFromUserRole=true
