Use productId while exposing products

--- a/infrastructure/src/main/resources/open-api/server/product-oas.yaml
+++ b/infrastructure/src/main/resources/open-api/server/product-oas.yaml
@@ -19,6 +19,7 @@ paths:
           required: true
           schema:
             type: string
+            format: uuid
       responses:
         200:
           description: OK
@@ -74,6 +75,7 @@ components:
       properties:
         id:
           type: string
+          format: uuid
         name:
           type: string
         description:
