--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -38,9 +38,15 @@ dependencies {
     // Swagger UI
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
+    // Others
+    implementation 'commons-io:commons-io:2.15.1'
+
+    // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:4.7.0'
     testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.7.0'
+
     testImplementation 'io.mockk:mockk:1.13.8'
 
     // Other modules
