--- a/infrastructure/src/main/resources/application.yaml
+++ b/infrastructure/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
+spring:
+  data:
+    mongodb:
+      database:
+      uri:
+      auto-index-creation: true
 ---
 spring:
   config:
@@ -5,10 +11,6 @@ spring:
       on-profile: local
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: products
-#      username: TechInnovative
-#      password: TechInnovative
-      uuid-representation: standard
+      uri: mongodb://localhost:27017
+      database: products-db
 #      uri: mongodb://user@localhost:27017/admin?retryWrites=true&loadBalanced=false&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1&3t.uriVersion=3&3t.databases=admin&3t.alwaysShowAuthDB=true&3t.alwaysShowDBFromUserRole=true
