Get github variable via vars.

--- a/.github/workflows/environment-check.yaml
+++ b/.github/workflows/environment-check.yaml
@@ -13,5 +13,5 @@ jobs:
     steps:
       - name: Print vars
         env:
-          ENV1: ${{ ENV }}
+          ENV1: ${{ vars.ENV }}
         run: echo "$ENV1"
