--- a/infrastructure/web/build.gradle
+++ b/infrastructure/web/build.gradle
@@ -3,6 +3,7 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 plugins {
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
+
     id 'org.jetbrains.kotlin.plugin.spring'
     id 'org.jetbrains.kotlin.kapt'
 
@@ -26,8 +27,8 @@ dependencies {
     implementation 'io.swagger.core.v3:swagger-models:2.2.20'
 
     // Mapstruct
-    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-    kapt 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    implementation "org.mapstruct:mapstruct:$mapStructVersion"
+    kapt "org.mapstruct:mapstruct-processor:$mapStructVersion"
 
 //    compileOnly 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 
@@ -51,6 +52,7 @@ dependencies {
 
     // Other modules
     implementation project(':domain:products')
+    implementation project(':infrastructure:common')
 }
 
 kapt {
