--- a/.github/workflows/environment-check.yaml
+++ b/.github/workflows/environment-check.yaml
@@ -14,4 +14,7 @@ jobs:
       - name: Print vars
         env:
           ENV1: ${{ vars.ENV }}
-        run: echo "$ENV1"
+        run: |
+          echo "----------"
+          echo "$ENV1"          
+          echo "----------"
