--- a/infrastructure/web/src/main/resources/open-api/server/product-oas.yaml
+++ b/infrastructure/web/src/main/resources/open-api/server/product-oas.yaml
@@ -27,6 +27,62 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Product'
+    delete:
+      summary: Delete a product by ID
+      description: >
+        Deletes the product with the specified ID.
+      operationId: remove
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: The ID of the product to delete.
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '204':
+          description: Product deleted successfully.
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Bad request. Please check your request parameters.
+        '401':
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Unauthorized. Please authenticate to perform this action.
+        '403':
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Forbidden. You don't have permission to delete this product.
+        '404':
+          description: Product not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Product with ID {id} not found.
   /products:
     get:
       summary: Get a list of products
