Comment flapdoodle os override

--- a/infrastructure/web/build.gradle
+++ b/infrastructure/web/build.gradle
@@ -78,8 +78,8 @@ tasks.withType(KotlinCompile) {
 // tasks.named('test') {
 test {
     systemProperties = [
-            "TEST_VAR"                 : "test",
-            "de.flapdoodle.os.override": "Linux|X86_64|Ubuntu|Ubuntu_22_04"
+            "TEST_VAR": "test",
+//            "de.flapdoodle.os.override": "Linux|X86_64|Ubuntu|Ubuntu_22_04"
     ]
     println "Starting Tests ..."
     useJUnitPlatform()
