--- a/infrastructure/repository/build.gradle
+++ b/infrastructure/repository/build.gradle
@@ -41,7 +41,7 @@ kapt {
 test {
     systemProperties = [
             "TEST_VAR"                 : "test",
-            "de.flapdoodle.os.override": "Linux|X86_64|Ubuntu|Ubuntu_22_04"
+//            "de.flapdoodle.os.override": "Linux|X86_64|Ubuntu|Ubuntu_22_04"
     ]
     println("Starting test in repository ...")
     useJUnitPlatform()
