--- a/infrastructure/web/src/main/resources/open-api/server/product-oas.yaml
+++ b/infrastructure/web/src/main/resources/open-api/server/product-oas.yaml
@@ -2,12 +2,14 @@ openapi: 3.0.3
 info:
   title: Product Service Api
   description: Product Service Api
-  version: 1.0.4
+  version: 1.0.5
 servers:
   - url: 'https'
 paths:
   /products/{id}:
     get:
+      tags:
+        - Product API
       summary: Represent a product
       description: >
         This resource represents an individual product in the system.
@@ -28,6 +30,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/Product'
     delete:
+      tags:
+        - Product API
       summary: Delete a product by ID
       description: >
         Deletes the product with the specified ID.
@@ -85,10 +89,12 @@ paths:
                     example: Product with ID {id} not found.
   /products:
     get:
+      tags:
+        - Product API
       summary: Get a list of products
       description: >
         Find products based on given parameters
-        If no product find, empty list will be returned
+        If no product find, empty list will be returened
       operationId: findProducts
       parameters:
         - in: query
@@ -106,6 +112,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/Product'
     post:
+      tags:
+        - Product API
       summary: New product will be created
       description: >
         This resource will create and add new product.
@@ -192,3 +200,6 @@ components:
           type: array
           items:
             type: string
+tags:
+  - name: Product API
+    description: Product API
