--- a/infrastructure/web/src/main/resources/application.yaml
+++ b/infrastructure/web/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
       auto-index-creation: true
 logging:
   level:
-    root: DEBUG
+    root: INFO
 
 ---
 spring:
@@ -15,6 +15,6 @@ spring:
       on-profile: local
   data:
     mongodb:
-      uri: mongodb://localhost:27017
+      uri: mongodb://user1:Password1@localhost:27017/?authSource=admin
       database: products-db
 #      uri: mongodb://user@localhost:27017/admin?retryWrites=true&loadBalanced=false&connectTimeoutMS=10000&authSource=admin&authMechanism=SCRAM-SHA-1&3t.uriVersion=3&3t.databases=admin&3t.alwaysShowAuthDB=true&3t.alwaysShowDBFromUserRole=true
